; ModuleID = '/home/carl/AnghaBench/reactos/win32ss/gdi/ntgdi/extr_gdikdbgext.c_KdbIsMemoryValid.c'
source_filename = "/home/carl/AnghaBench/reactos/win32ss/gdi/ntgdi/extr_gdikdbgext.c_KdbIsMemoryValid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PAGE_SIZE = common dso_local global i64 0, align 8
@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @KdbIsMemoryValid(i64 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load i64, i64* %4, align 8
  %8 = load i64, i64* @PAGE_SIZE, align 8
  %9 = call i64 @ALIGN_DOWN_POINTER_BY(i64 %7, i64 %8)
  store i64 %9, i64* %6, align 8
  br label %10

10:                                               ; preds = %22, %2
  %11 = load i64, i64* %6, align 8
  %12 = load i64, i64* %4, align 8
  %13 = load i64, i64* %5, align 8
  %14 = add nsw i64 %12, %13
  %15 = icmp slt i64 %11, %14
  br i1 %15, label %16, label %26

16:                                               ; preds = %10
  %17 = load i64, i64* %6, align 8
  %18 = call i32 @MmIsAddressValid(i64 %17)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %22, label %20

20:                                               ; preds = %16
  %21 = load i32, i32* @FALSE, align 4
  store i32 %21, i32* %3, align 4
  br label %28

22:                                               ; preds = %16
  %23 = load i64, i64* @PAGE_SIZE, align 8
  %24 = load i64, i64* %6, align 8
  %25 = add nsw i64 %24, %23
  store i64 %25, i64* %6, align 8
  br label %10

26:                                               ; preds = %10
  %27 = load i32, i32* @TRUE, align 4
  store i32 %27, i32* %3, align 4
  br label %28

28:                                               ; preds = %26, %20
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i64 @ALIGN_DOWN_POINTER_BY(i64, i64) #1

declare dso_local i32 @MmIsAddressValid(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
